--- a/CodeNetCore/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/CodeNetCore/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using CodeNetCore.Extensions
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -7,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Admin Control Panel </title>
+    <title>Admin Control Panel  </title>
 
     <!-- Bootstrap -->
     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
@@ -36,11 +37,11 @@
                     <!-- menu profile quick info -->
                     <div class="profile clearfix">
                         <div class="profile_pic">
-                            <img src="/admin-side/images/img.jpg" alt="..." class="img-circle profile_img">
+                            <img src="@User.GetspecificClaim("Avatar")" alt="..." class="img-circle profile_img">
                         </div>
                         <div class="profile_info">
                             <span>Welcome,</span>
-                            <h2>John Doe</h2>
+                            <h2>@User.GetspecificClaim("FullName")</h2>
                         </div>
                     </div>
                     <!-- /menu profile quick info -->
@@ -194,7 +195,7 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li class="">
                                 <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                    <img src="/admin-side/images/img.jpg" alt="">John Doe
+                                    <img src="@User.GetspecificClaim("Avatar")" alt="">@User.GetspecificClaim("UserName")
                                     <span class=" fa fa-angle-down"></span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-usermenu pull-right">
@@ -220,7 +221,7 @@
                                         <a>
                                             <span class="image"><img src="/admin-side/images/img.jpg" alt="Profile Image" /></span>
                                             <span>
-                                                <span>John Smith</span>
+                                                <span>@User.GetspecificClaim("FullName")</span>
                                                 <span class="time">3 mins ago</span>
                                             </span>
                                             <span class="message">
@@ -242,9 +243,9 @@
                                     </li>
                                     <li>
                                         <a>
-                                            <span class="image"><img src="/admin-side/images/img.jpg" alt="Profile Image" /></span>
+                                            <span class="image"><img src="@User.GetspecificClaim("Avatar")" alt="Profile Image" /></span>
                                             <span>
-                                                <span>John Smith</span>
+                                                <span>@User.GetspecificClaim("UserName")</span>
                                                 <span class="time">3 mins ago</span>
                                             </span>
                                             <span class="message">
@@ -254,9 +255,9 @@
                                     </li>
                                     <li>
                                         <a>
-                                            <span class="image"><img src="/admin-side/images/img.jpg" alt="Profile Image" /></span>
+                                            <span class="image"><img src="@User.GetspecificClaim("Avatar")" alt="Profile Image" /></span>
                                             <span>
-                                                <span>John Smith</span>
+                                                <span>@User.GetspecificClaim("FullName")</span>
                                                 <span class="time">3 mins ago</span>
                                             </span>
                                             <span class="message">
