--- a/CodeNetCore/Areas/Admin/Views/_ViewImports.cshtml
+++ b/CodeNetCore/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 @using Microsoft.AspNetCore.Identity
-@using CodeNetCore
+@using CodeNetCore.Application
 @using CodeNetCore.Models
 @using CodeNetCore.Models.AccountViewModels
 @using CodeNetCore.Models.ManageViewModels
+@using CodeNetCore.Application.ViewModels.Function
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
