--- a/CodeNetCore/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/CodeNetCore/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
     <link href="~/lib/notifyjs/dist/styles/metro/notify-metro.css" rel="stylesheet" />
     <!-- Custom Theme Style -->
     <link href="~/admin-side/css/custom.css" rel="stylesheet" />
+    @RenderSection("Styles",required:false)
 </head>
 
 <body class="nav-md">
@@ -199,12 +200,13 @@
     <!-- bootstrap-daterangepicker -->
     <script src="~/lib/moment/min/moment.min.js"></script>
     <script src="~/lib/bootstrap-daterangepicker/daterangepicker.js"></script>
-
+    <script src="~/lib/mustache/mustache.js"></script>
     <script src="~/lib/notifyjs/dist/notify.js"></script>
     <script src="~/lib/notifyjs/dist/styles/metro/notify-metro.js"></script>
     <script src="~/lib/bootbox/bootbox.js"></script>
     <script src="~/app/shared/thiepvu.js"></script>
     <!-- Custom Theme Scripts -->
     <script src="~/admin-side/js/custom.js"></script>
+    @RenderSection("scripts",required:false)
 </body>
 </html>
