--- a/CodeNetCore/Areas/Admin/Views/Product/Index.cshtml
+++ b/CodeNetCore/Areas/Admin/Views/Product/Index.cshtml
@@ -12,6 +12,7 @@
 
     <div class="title_right">
         <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+
             <div class="input-group">
                 <input type="text" id="txtKeyword" class="form-control" placeholder="Search for...">
                 <span class="input-group-btn">
@@ -19,11 +20,17 @@
                 </span>
             </div>
         </div>
+        <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+            <select class="form-control" id="ddlCategorySearch">
+                <option value="1">Chọn danh mục</option>
+            </select>
+        </div>
+
     </div>
 </div><div class="clearfix"></div>
 
 <div class="row">
-    <div class="col-md-12 col-sm-6 col-xs-12">
+    <div class="col-md-12 col-sm-12 col-xs-12">
         <div class="x_panel">
             <div class="x_title">
                 <h2>Boardered table <small>Bordered table subtitle</small></h2>
