--- a/CodeNetCore/Areas/Admin/Views/ProductCategory/Index.cshtml
+++ b/CodeNetCore/Areas/Admin/Views/ProductCategory/Index.cshtml
@@ -1,9 +1,10 @@
 ﻿
- 
- 
+
+
 @section Styles{
     <link href="~/lib/jQuery-EasyUI/themes/bootstrap/easyui.css" rel="stylesheet" />
     <link href="~/lib/jQuery-EasyUI/themes/icon.css" rel="stylesheet" />
+    <link href="~/lib/jQuery-EasyUI/themes/color.css" rel="stylesheet" />
 }
 @section Scripts{
     <script src="~/lib/jQuery-EasyUI/jquery.easyui.min.js" asp-append-version="true"></script>
@@ -24,7 +25,6 @@
             <button class="btn btn-success" id="btnCreate" type="button">Thêm mới</button>
 
         </div>
-
 
     </div>
 </div><div class="clearfix"></div>
