Update Lesson 28 done

--- a/CodeNetCore/Areas/Admin/Views/Login/Index.cshtml
+++ b/CodeNetCore/Areas/Admin/Views/Login/Index.cshtml
@@ -37,10 +37,10 @@
                         @Html.AntiForgeryToken()
                         <h1>Form Login</h1>
                         <div>
-                            <input type="text" data-required="true" id="txtUserName" name="userName" class="form-control" placeholder="User Name" required="" />
+                            <input type="text" data-required="true" id="txtUserName" value="admin" name="userName" class="form-control" placeholder="User Name" required="" />
                         </div>
                         <div>
-                            <input type="password" id="txtPassword" name="password" class="form-control" placeholder="Password" required="" />
+                            <input type="password" id="txtPassword" name="password" class="form-control" value="123654$" placeholder="Password" required="" />
                         </div>
                         <div>
                             <a class="btn btn-default submit" href="#" id="btnLogin">Login</a>
