--- a/CodeNetCore/Areas/Admin/Views/ProductCategory/Index.cshtml
+++ b/CodeNetCore/Areas/Admin/Views/ProductCategory/Index.cshtml
@@ -36,11 +36,16 @@
             <div class="x_content">
 
                 <ul id="treeProductCategory"></ul>
+                <div id="contextMenu" class="easyui-menu" style="width:120px;">
 
+                    <div id="btnEdit" data-options="iconCls:'icon-edit'">Sửa</div>
+                    <div id="btnCreateM" data-options="iconCls:'icon-add'">Thêm Con</div>
+                    <div id="btnDelete" data-options="iconCls:'icon-remove'">Xoá</div>
+                </div>
             </div>
         </div>
     </div>
 </div>
 
-
-
+ 
+@Html.Partial("_AddEditModal.cshtml");
