--- a/CodeNetCore/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/CodeNetCore/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -196,6 +196,8 @@
     <script src="~/lib/flot-spline/js/jquery.flot.spline.min.js"></script>
     <script src="~/lib/flot.curvedlines/curvedLines.js"></script>
     <!-- DateJS -->
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation/localization/messages_vi.js"></script>
     <script src="~/lib/DateJS/build/date.js"></script>
     <!-- bootstrap-daterangepicker -->
     <script src="~/lib/twbs-pagination/jquery.twbsPagination.js"></script>
